# transaction_new

./: .gitignore
aqua/: crypto.aqua  ipfsdag.aqua  transaction.aqua
services/: Cargo.toml  Config.toml  build.sh
services/transaction/: Cargo.toml
services/transaction/src/: defaults.rs  error.rs  main.rs  meta_contract.rs  metadata.rs  transaction.rs  utils.rs
services/types/: Cargo.toml
services/types/src/: keypair.rs  lib.rs  result.rs
